[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dra_feature"
version = "0.0.31"
authors = [
  { name="Jonas Licht", email="jonas-licht@gmx.de"},
]
description = "A package for automated feature engineering based on dimension reduction algorithms"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "kneed>=0.8.2",
    "pandas>=1.5.3",
    "scikit-learn>=1.2.0",
    "umap-learn>=0.5.3",
]

keywords = ["automl", "feature", "feature engineering", "data preparation"]

[project.urls]
"Homepage" = "https://github.com/Wuuzzaa/dra_feature"
"Bug Tracker" = "https://github.com/Wuuzzaa/dra_feature/issues"